Updated FLask Server

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,5 +10,6 @@
     <body>
         <h2>Perkele!</h2>
         <a href="/omg">What?!</a>
+        <DROPDOWN CATEGORIES>{pnns_groups_2}</DROPDOWN>
     </body>
 </html>
