New website version

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,11 +3,14 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>PHI WOW</title>
+        <title>Sustainabite</title>
+        <link rel="stylesheet" href="{{ url_for('static', filename='index_style.css') }}">
     </head>
 
     <body>
-        <h1>Perkele!</h1>
-        <a href="/omg">What?!</a>
+        <h1>🌱 S U S T A I N A B I T E 🌱</h1>
+
+        <h2>🏗️ 🔧 Under Construction 🛠️ 🚧</h2>
+
     </body>
 </html>
