Enhanced website version

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,5 +12,9 @@
 
         <h2>🏗️ 🔧 Under Construction 🛠️ 🚧</h2>
 
+        <p>
+            <a href="/winteriscoming">Team Phi ©</a>
+        </p>
+
     </body>
 </html>
