--- a/static/index_style.css
+++ b/static/index_style.css
@@ -24,8 +24,14 @@ h2 {
   /* box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1); */
   transition: 0.3s;
   margin-top: 18%;
+  margin-bottom: 10%;
 }
 
 h2:hover {
   transform: scale(1.5);
+}
+
+a {
+  text-decoration: none;
+  font-style: italic;
 }
