--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,8 @@
     <body>
         <h1>🌱 S U S T A I N A B I T E 🌱</h1>
 
+        <h1><img src="static\Sustainabite logo.png" alt="Sustainabite"></h1>
+
         <h2>🏗️ 🔧 Under Construction 🛠️ 🚧</h2>
 
         <p>
