--- a/static/index_style.css
+++ b/static/index_style.css
@@ -5,55 +5,117 @@
   font-style: normal;
 }
 
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
+@font-face {
+  font-family: 'Sustainabite_vogue';
+  src: url('/static/Vogue.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
 }
 
+@font-face {
+  font-family: 'Sustainabite_foodprint';
+  src: url('/static/josephsophia.otf') format('opentype');
+  font-weight: normal;
+  font-style: normal;
+}
 
-
-h1 {
+#main_title {
   color: rgb(8, 171, 8);
-  font-family: 'Sustainabite';
-  font-size: 2.5em;
+  font-family: 'Sustainabite_vogue';
+  font-weight: lighter;
+  font-size: 5em;
+  margin-top: 50px;
+  margin-bottom: 10px;
 }
 
-h2 {
-  font-size: 1.5em;
-  text-align: center;
-  border-radius: 10px;
-  /* box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1); */
-  transition: 0.3s;
-  margin-top: 18%;
-  margin-bottom: 10%;
+#second_title {
+  color: rgb(8, 171, 8);
+  font-family: 'Sustainabite_foodprint';
+  font-weight: lighter;
+  font-size: 3em;
+  margin-top: 30px;
+  font-style: italic;
 }
 
-h2:hover {
-  transform: scale(1.5);
+
+#main_image {
+  height: 300px;
+  width: auto;
+}
+
+@media only screen and (max-width: 1200px) {
+  #main_image {
+    height: 150px;
+  }
+  #main_title {
+    color: rgb(8, 171, 8);
+    font-family: 'Sustainabite_vogue';
+    font-weight: lighter;
+    font-size: 3em;
+    margin-top: 50px;
+    margin-bottom: 10px;
+  }
+  #second_title {
+    color: rgb(8, 171, 8);
+    font-family: 'Sustainabite_foodprint';
+    font-weight: lighter;
+    font-size: 2em;
+    margin-top: 30px;
+    font-style: italic;
+  }
 }
 
 a {
   text-decoration: none;
-  font-style: italic;
+  line-height: 80px;
+  color: black;
 }
 
-.container {
-  z-index: 1;
+html {
+  font-family: "Open Sans", Helvetica, arial, sans-serif;
+  text-align: center;
+}
+
+.button {
   position: relative;
+  display: block;
   overflow: hidden;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  min-height: 35rem;
-  background-image: linear-gradient(to bottom, rgba(255, 168, 76, 0.6) 0%, rgba(255, 123, 13, 0.6) 100%), url("https://images.unsplash.com/photo-1446824505046-e43605ffb17f");
-  background-blend-mode: soft-light;
-  background-size: cover;
-  background-position: center center;
-  padding: 2rem;
+  width: 100%;
+  height: 80px;
+  max-width: 250px;
+  margin: 1rem auto;
+  border: 1px solid currentColor;
+  margin-top: 100px;
+}
+
+.button {
+  color: #088210;
+}
+
+.button span {
+  position: absolute;
+  display: block;
+  width: 0;
+  height: 0;
+  border-radius: 50%;
+  background-color: #088210;
+  transition: width 0.4s ease-in-out, height 0.4s ease-in-out;
+  transform: translate(-50%, -50%);
+  z-index: -1;
+}
+.button:hover {
+  color: #a9f5c0;
+}
+.button:hover span {
+  width: 225%;
+  height: 562.5px;
+}
+.button:active {
+  background-color: #043f16;
 }
 
 .bird {
+  z-index: 3;
   background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/174479/bird-cells-new.svg);
   background-size: auto 100%;
   width: 88px;
