--- a/templates/index.html
+++ b/templates/index.html
@@ -3,20 +3,16 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Sustainabite</title>
+        <title>Welcome to Sustainabite!</title>
         <link rel="stylesheet" href="{{ url_for('static', filename='index_style.css') }}">
     </head>
 
     <body>
-        <h1>🌱 S U S T A I N A B I T E 🌱</h1>
+        <img id= "main_image" src="{{ url_for('static', filename='sustainabite_trans.png') }}" alt="Sustainabite Logo">
 
-        <h1><img src="static\Sustainabite logo.png" alt="Sustainabite"></h1>
-
-        <h2>🏗️ 🔧 Under Construction 🛠️ 🚧</h2>
-
-        <p>
-            <a href="/winteriscoming">Team Phi ©</a>
-        </p>
+        <h1 id="main_title">S U S T A I N A B I T E</h1>
+    
+        <h2 id="second_title">oodprinmatter</h2>
 
         <div class="bird-container bird-container--one">
             <div class="bird bird--one"></div>
@@ -34,5 +30,8 @@
             <div class="bird bird--four"></div>
         </div>
 
+        <a class="button" href="/landing">ENTER THE APP<span></span></a>
+        <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+        <script src='https://s.codepen.io/assets/libs/modernizr.js'></script><script  src="{{ url_for('static', filename='script_index.js') }}"></script>
     </body>
 </html>
