--- a/templates/landing.html
+++ b/templates/landing.html
@@ -32,7 +32,7 @@
                         
                         <h2 class="title">Chocolates</h2>
                         <p class="copy">Discover the environmental impact of those sweet chocolates</p>
-                        <button class="btn" href="/chocolate">Explore</button>
+                        <a class="btn" href="/query-chocolate">Explore</a>
 
                     </div>
                 </div>
@@ -42,7 +42,17 @@
                         
                         <h2 class="title">Category Name</h2>
                         <p class="copy">Text placeholder</p>
-                        <button class="btn">Explore</button>
+                        <a class="btn" href="/">Explore</a>
+
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="content">
+                        
+                        <h2 class="title">Category Name</h2>
+                        <p class="copy">Text placeholder</p>
+                        <a class="btn" href="/">Explore</a>
                         
                     </div>
                 </div>
@@ -52,7 +62,7 @@
                         
                         <h2 class="title">Category Name</h2>
                         <p class="copy">Text placeholder</p>
-                        <button class="btn">Explore</button>
+                        <a class="btn" href="/">Explore</a>
                         
                     </div>
                 </div>
@@ -62,7 +72,7 @@
                         
                         <h2 class="title">Category Name</h2>
                         <p class="copy">Text placeholder</p>
-                        <button class="btn">Explore</button>
+                        <a class="btn" href="/">Explore</a>
                         
                     </div>
                 </div>
@@ -72,7 +82,7 @@
                         
                         <h2 class="title">Category Name</h2>
                         <p class="copy">Text placeholder</p>
-                        <button class="btn">Explore</button>
+                        <a class="btn" href="/">Explore</a>
                         
                     </div>
                 </div>
@@ -82,7 +92,7 @@
                         
                         <h2 class="title">Category Name</h2>
                         <p class="copy">Text placeholder</p>
-                        <button class="btn">Explore</button>
+                        <a class="btn" href="/">Explore</a>
                         
                     </div>
                 </div>
@@ -92,7 +102,7 @@
                         
                         <h2 class="title">Category Name</h2>
                         <p class="copy">Text placeholder</p>
-                        <button class="btn">Explore</button>
+                        <a class="btn" href="/">Explore</a>
                         
                     </div>
                 </div>
@@ -102,7 +112,7 @@
                         
                         <h2 class="title">Category Name</h2>
                         <p class="copy">Text placeholder</p>
-                        <button class="btn">Explore</button>
+                        <a class="btn" href="/">Explore</a>
                         
                     </div>
                 </div>
@@ -112,7 +122,7 @@
                         
                         <h2 class="title">Category Name</h2>
                         <p class="copy">Text placeholder</p>
-                        <button class="btn">Explore</button>
+                        <a class="btn" href="/">Explore</a>
                         
                     </div>
                 </div>
@@ -122,7 +132,7 @@
                         
                         <h2 class="title">Category Name</h2>
                         <p class="copy">Text placeholder</p>
-                        <button class="btn">Explore</button>
+                        <a class="btn" href="/">Explore</a>
                         
                     </div>
                 </div>
@@ -132,7 +142,7 @@
                         
                         <h2 class="title">Category Name</h2>
                         <p class="copy">Text placeholder</p>
-                        <button class="btn">Explore</button>
+                        <a class="btn" href="/">Explore</a>
                         
                     </div>
                 </div>
@@ -142,7 +152,7 @@
                         
                         <h2 class="title">Category Name</h2>
                         <p class="copy">Text placeholder</p>
-                        <button class="btn">Explore</button>
+                        <a class="btn" href="/">Explore</a>
                         
                     </div>
                 </div>
@@ -152,7 +162,7 @@
                         
                         <h2 class="title">Category Name</h2>
                         <p class="copy">Text placeholder</p>
-                        <button class="btn">Explore</button>
+                        <a class="btn" href="/">Explore</a>
                         
                     </div>
                 </div>
@@ -162,17 +172,7 @@
                         
                         <h2 class="title">Category Name</h2>
                         <p class="copy">Text placeholder</p>
-                        <button class="btn">Explore</button>
-                        
-                    </div>
-                </div>
-
-                <div class="card">
-                    <div class="content">
-                        
-                        <h2 class="title">Category Name</h2>
-                        <p class="copy">Text placeholder</p>
-                        <button class="btn">Explore</button>
+                        <a class="btn" href="/">Explore</a>
                         
                     </div>
                 </div>
