--- a/templates/results.html
+++ b/templates/results.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Query Results</title>
-</head>
 
-<body>
-  <h1>All the chocolates</h1>
+<html lang="en">
+
+  <head>
+    <meta charset="UTF-8">
+    {% extends "base.html" %}
+
+    <title>{% block title %}Chocolates{% endblock %}</title>
+
+    {% block extra_css %}
+    {% endblock %}
+  </head>
+
+  <body>
+
+    {% block content %}
+
+    <h1>All the Chocolates</h1>
+
     {% if records %}
     <table border="1">
-        <thead>
-        <tr>
-            {% for key in records[0].keys() %}
-            <th>{{ key }}</th>
-            {% endfor %}
-        </tr>
-        </thead>
         <tbody>
         {% for row in records %}
             <tr>
@@ -26,10 +30,9 @@
         {% endfor %}
         </tbody>
     </table>
-    {% else %}
-    <p>No records found.</p>
     {% endif %}
-  <br>
-  <a href="/">Back to Home</a>
-</body>
+
+    {% endblock %}
+  </body>
+
 </html>
