--- a/static/base_style.css
+++ b/static/base_style.css
@@ -19,6 +19,13 @@
     font-style: normal;
   }
 
+  @font-face {
+    font-family: 'Signature';
+    src: url('/static/Autography.otf') format('opentype');
+    font-weight: normal;
+    font-style: normal;
+  }
+
 html {
   background-color: #f5f5f5;
 }
@@ -102,7 +109,7 @@ a {
   }
 
 .buttons {
-    background: linear-gradient(0deg, #4CAF50, #81C784);
+    background: linear-gradient(180deg, #3EB489, #62D28F);
     border: none;
     color: white;
     padding: 10px 20px;
@@ -112,6 +119,8 @@ a {
     cursor: pointer;
     transition: background 0.3s ease, transform 0.2s ease;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    font-family: Calibri;
+    font-size: 1em;
 }
 
 input {
@@ -121,7 +130,7 @@ input {
 }
 
 .buttons:hover {
-  background: linear-gradient(45deg, #388E3C, #66BB6A);
+  background: linear-gradient(180deg, #74E193, #98FF99);
   transform: translateY(-2px);
 }
 
