--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     </head>
 
     <body>
-        <img id= "main_image" src="{{ url_for('static', filename='sustainabite_trans.png') }}" alt="Sustainabite Logo">
+        <img id= "main_image" src="{{ url_for('static', filename='sustainabite_trans.png') }}" alt="Sustainabite Logo" class="wobble">
 
         <h1 id="main_title">S U S T A I N A B I T E</h1>
     
