--- a/static/index_style.css
+++ b/static/index_style.css
@@ -37,6 +37,25 @@
   font-style: italic;
 }
 
+.wobble {
+  width: 200px;
+  animation: wobble 1.5s infinite ease-in-out;
+}
+
+@keyframes wobble {
+  0%, 100% {
+    transform: rotate(0deg);
+  }
+  25% {
+    transform: rotate(5deg);
+  }
+  50% {
+    transform: rotate(-5deg);
+  }
+  75% {
+    transform: rotate(3deg);
+  }
+}
 
 #main_image {
   height: 300px;
