--- a/static/index_style.css
+++ b/static/index_style.css
@@ -6,6 +6,13 @@
 }
 
 @font-face {
+  font-family: 'Sustainabite_logo';
+  src: url('/static/Dosis-Bold.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
   font-family: 'Sustainabite_vogue';
   src: url('/static/Vogue.ttf') format('truetype');
   font-weight: normal;
@@ -20,9 +27,9 @@
 }
 
 #main_title {
-  color: rgb(8, 171, 8);
-  font-family: 'Sustainabite_vogue';
-  font-weight: lighter;
+  color: rgb(11, 133, 11);
+  font-family: 'Sustainabite_logo';
+  font-weight: normal;
   font-size: 5em;
   margin-top: 50px;
   margin-bottom: 10px;
