--- a/templates/landing.html
+++ b/templates/landing.html
@@ -31,155 +31,73 @@
             <main class="page-content">
 
                 <div class="card">
-                    <div class="content">
-                        
-                        <h2 class="title">Chocolates</h2>
-                        <p class="copy">Discover the environmental impact of those sweet chocolates</p>
-                        <a class="btn" href="/query-chocolate">Explore</a>
+                    <a href="/query-alcohol" class="card-link">
+                      <div class="content">
+                        <h2 class="title">Alcohol</h2>
+                      </div>
+                    </a>
+                  </div>
 
-                    </div>
+
+                  <div class="card">
+                    <a href="/query-canned-food" class="card-link">
+                        <div class="content">
+                            <h2 class="title">Canned food</h2>
+                        </div>
+                    </a>
                 </div>
 
                 <div class="card">
-                    <div class="content">
-                        
-                        <h2 class="title">Category Name</h2>
-                        <p class="copy">Text placeholder</p>
-                        <a class="btn" href="/">Explore</a>
-
-                    </div>
+                    <a href="/query-cheese" class="card-link">
+                        <div class="content">
+                            <h2 class="title">Cheese</h2>                            
+                        </div>
+                    </a>
                 </div>
-
+                
                 <div class="card">
-                    <div class="content">
-                        
-                        <h2 class="title">Category Name</h2>
-                        <p class="copy">Text placeholder</p>
-                        <a class="btn" href="/">Explore</a>
-                        
-                    </div>
+                    <a href="/query-chocolate" class="card-link">
+                        <div class="content">
+                            <h2 class="title">Chocolate</h2>                            
+                        </div>
+                    </a>
                 </div>
-
+                
                 <div class="card">
-                    <div class="content">
-                        
-                        <h2 class="title">Category Name</h2>
-                        <p class="copy">Text placeholder</p>
-                        <a class="btn" href="/">Explore</a>
-                        
-                    </div>
+                    <a href="/query-fruit" class="card-link">
+                        <div class="content">
+                            <h2 class="title">Fruit</h2>                            
+                        </div>
+                    </a>
                 </div>
-
+                
                 <div class="card">
-                    <div class="content">
-                        
-                        <h2 class="title">Category Name</h2>
-                        <p class="copy">Text placeholder</p>
-                        <a class="btn" href="/">Explore</a>
-                        
-                    </div>
+                    <a href="/query-ice-cream" class="card-link">
+                        <div class="content">
+                            <h2 class="title">Ice cream</h2>                            
+                        </div>
+                    </a>
                 </div>
-
+                
                 <div class="card">
-                    <div class="content">
-                        
-                        <h2 class="title">Category Name</h2>
-                        <p class="copy">Text placeholder</p>
-                        <a class="btn" href="/">Explore</a>
-                        
-                    </div>
+                    <a href="/query-meat" class="card-link">
+                        <div class="content">
+                            <h2 class="title">Meat</h2>                            
+                        </div>
+                    </a>
                 </div>
-
+                
                 <div class="card">
-                    <div class="content">
-                        
-                        <h2 class="title">Category Name</h2>
-                        <p class="copy">Text placeholder</p>
-                        <a class="btn" href="/">Explore</a>
-                        
-                    </div>
-                </div>
+                    <a href="/query-milk" class="card-link">
+                        <div class="content">
+                            <h2 class="title">Milk</h2>                            
+                        </div>
+                    </a>
+                </div>  
 
-                <div class="card">
-                    <div class="content">
-                        
-                        <h2 class="title">Category Name</h2>
-                        <p class="copy">Text placeholder</p>
-                        <a class="btn" href="/">Explore</a>
-                        
-                    </div>
-                </div>
 
-                <div class="card">
-                    <div class="content">
-                        
-                        <h2 class="title">Category Name</h2>
-                        <p class="copy">Text placeholder</p>
-                        <a class="btn" href="/">Explore</a>
-                        
-                    </div>
-                </div>
 
-                <div class="card">
-                    <div class="content">
-                        
-                        <h2 class="title">Category Name</h2>
-                        <p class="copy">Text placeholder</p>
-                        <a class="btn" href="/">Explore</a>
-                        
-                    </div>
-                </div>
-
-                <div class="card">
-                    <div class="content">
-                        
-                        <h2 class="title">Category Name</h2>
-                        <p class="copy">Text placeholder</p>
-                        <a class="btn" href="/">Explore</a>
-                        
-                    </div>
-                </div>
-
-                <div class="card">
-                    <div class="content">
-                        
-                        <h2 class="title">Category Name</h2>
-                        <p class="copy">Text placeholder</p>
-                        <a class="btn" href="/">Explore</a>
-                        
-                    </div>
-                </div>
-
-                <div class="card">
-                    <div class="content">
-                        
-                        <h2 class="title">Category Name</h2>
-                        <p class="copy">Text placeholder</p>
-                        <a class="btn" href="/">Explore</a>
-                        
-                    </div>
-                </div>
-
-                <div class="card">
-                    <div class="content">
-                        
-                        <h2 class="title">Category Name</h2>
-                        <p class="copy">Text placeholder</p>
-                        <a class="btn" href="/">Explore</a>
-                        
-                    </div>
-                </div>
-
-                <div class="card">
-                    <div class="content">
-                        
-                        <h2 class="title">Category Name</h2>
-                        <p class="copy">Text placeholder</p>
-                        <a class="btn" href="/">Explore</a>
-                        
-                    </div>
-                </div>
-
+                
             </main>
         {% endblock %}
     </body>
