--- a/templates/base.html
+++ b/templates/base.html
@@ -37,10 +37,23 @@
             </a>
 
             <a href="/basket" class="basket-button">
-                <span class="basket-icon">🧺</span> <!-- can also be replaced 🛒 with 🧺 -->
+                <span class="basket-icon">🧺</span>
                 <span id="basket-count" class="basket-count">0</span>
                 <span>Basket</span>
             </a>
+            
+            {% if current_user.is_authenticated %}
+                <a href="{{ url_for('user_profile') }}">
+                    <button class="buttons">👤 Profile</button>
+                </a>
+                <a href="{{ url_for('logout') }}">
+                    <button class="buttons"> Logout</button>
+                </a>
+            {% else %}
+                <a href="{{ url_for('login') }}">
+                    <button class="buttons"> Login</button>
+                </a>
+            {% endif %}
 
         </header>
 
