--- a/static/landing_style.css
+++ b/static/landing_style.css
@@ -15,6 +15,13 @@
 }
 
 @font-face {
+  font-family: 'Sustainabite_logo';
+  src: url('/static/Dosis-Bold.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
   font-family: 'Ticket';
   src: url('/static/TICKCI__.TTF') format('truetype');
   font-weight: normal;
